# SimuTrade

./: README.md
SimuTrade/: package.json  pnpm-lock.yaml  tsconfig.json
SimuTrade/public/: index.html
SimuTrade/src/: App.tsx  main.tsx  type.ts
SimuTrade/src-tauri/: Cargo.toml  tauri.conf.json
SimuTrade/src-tauri/src/: main.rs  stock_data.rs  trade_data.rs  user_management.rs
SimuTrade/src/Contexte/: UsersContexte.tsx
SimuTrade/src/components/Auth/: AuthForm.tsx
SimuTrade/src/components/Chart/: CandlestickChartComponent.tsx  ChartComponent.tsx
SimuTrade/src/components/List/: IndustryList.tsx  SectorList.tsx
SimuTrade/src/components/Navbar/: Navbar.tsx
SimuTrade/src/components/Stock/: CompanyData.tsx
SimuTrade/src/components/Trade/: OrderBook.tsx  TradeCharte.tsx  TradeForm.tsx  TradeTracking.tsx
SimuTrade/src/pages/: Auth.tsx  Home.tsx  StockDetails.tsx  StockListing.tsx  TakeTrade.tsx  TradeHistoryPage.tsx  TradePage.tsx
SimuTrade/src/services/: authService.tsx
SimuTrade/src/styles/: authPage.css  global.css  industryList.css  navBar.css  stockDetails.css  stockListing.css  takeTrade.css  tradePage.css  tradeTracking.css
tauri-app/: bun.lockb
