[package]
name = "simutrade"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.0"
futures = "0.3"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
